DMP-4705 Fix issue with manifest file name being saved when raw data push fails
Added code to set the eod manifest file to null if the push fails